[package]
name = "day17"
version = "0.1.0"
authors = ["Łukasz Konopka <lukasz.konopka@tooploox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
arrayvec ={ version = "0.5.2", features = ["array-sizes-33-128"] }
