[package]
name = "day7"
version = "0.1.0"
authors = ["Łukasz Konopka <lukasz.konopka@tooploox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.0.1", features = ["alloc"] }
id_tree = "1.7.0"
